--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="color-scheme: light;">
   <head>
     <script>
       // eslint-disable-next-line @typescript-eslint/ban-ts-comment
